@@ -1,3 +1,13 @@
+
+2009-05-07  Murray Cumming  <murrayc@murrayc.com>
+
+	Pass some sharedptr&s as const.
+
+	* glom/utility_widgets/flowtable_dnd.h: on_dnd_add_layout_item()
+	* glom/mode_data/flowtablewithfields.[h|cc]: on_dnd_add_layout_item(), 
+	on_entry_edited(), on_entry_open_details_requested(), 
+	on_dnd_add_layout_item(): Pass the sharedptr& as const.
+	
 1.8.8:
 
 2009-04-14  Murray Cumming  <murrayc@murrayc.com>
